Refine security model for admin-focused gateway